...
    <string name="posted">Posted</string>
    <string name="network_problem_message">Network Error Occurred</string>

    <!-- others -->
    <string name="no_data">No image found…</string>
    <string name="detail_container">detail_container</string>
    <string name="tab_title_1">POST</string>
    <string name="tab_title_2">FAVORITE</string>
    <string name="tab_title_3">ABOUT</string>
    <string name="flickr">Flickr</string>
    <string name="comment_prefix">comment to</string>
    <string name="comment_hint">Comment here</string>
    <string name="comment">Comment</string>
    <string name="no_comment">No Comment</string>
    <string name="comment_summary_prefix">See All</string>
...
